# image-tools

./: install_packages.sh
.github/workflows/: package-tests.yml
floresent_microscopy/: cellpainting_local.py
formats/dicom2nifti-plugin/: .bumpversion.cfg  Dockerfile  README.md  build-docker.sh  plugin.json  pyproject.toml  run-plugin.sh
formats/dicom2nifti-plugin/src/polus/plugins/images/formats/dicom2nifti/: __init__.py  __main__.py  dicom2nifti.py
formats/dicom2nifti-plugin/tests/: __init__.py  test_cli.py  test_dicom2nifti.py
formats/file-renaming-tool/: pyproject.toml
formats/ome-converter-tool/: .bumpversion.cfg  pyproject.toml
regression/basic-flatfield-estimation-tool/: pyproject.toml
regression/basic-flatfield-estimation-tool/src/polus/images/regression/basic_flatfield_estimation/: __init__.py  hyperactive_patch.py
segmentation/kaggle-nuclei-segmentation-tool/: pyproject.toml
transforms/images/apply-flatfield-tool/: pyproject.toml
transforms/images/polus-ftl-label-plugin/src/: requirements.txt
